<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/a2048_tv"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/usuario_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usuario_ev"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-199dp"
        android:text="@string/usuario"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/usuario_ev"
        android:layout_width="wrap_content"
        android:minWidth="199dp"
        android:maxWidth="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp" />

    <TextView
        android:id="@+id/contraseña_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="248dp"
        android:text="@string/contraseña"
        android:textColor="@color/colorAccent" />


    <EditText
        android:id="@+id/contraseña_ev"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/contraseña_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-248dp"
        android:inputType="textPassword"
        android:maxWidth="300dp"
        android:minWidth="199dp" />

    <Button
        android:id="@+id/iniciar_sesion_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_above="@id/registrar_boton"
        android:layout_marginBottom="16dp"

        android:background="@drawable/button_background"
        android:padding="5dp"
        android:text="@string/inicia_sesion"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />


    <Button
        android:id="@+id/registrar_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"

        android:background="@drawable/button_background"
        android:padding="5dp"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />




</RelativeLayout>